--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,10 @@ Guidelines and Safety Precautions\n
 
 5. Please include aerobic conditioning workouts which last for at least 20 minutes to 60 minutes.
 </string>
+    <string name="about">
+i-HeLP is a manual exercise prescription app that encourages the target population to take control of their health for good through a tailored workout plan prescribed directly by a healthcare professional.\n
+
+\t\t\t\tThrough a combination of technology and health, i-HeLP aims to help users with non-chronic and metabolic conditions meet their health goals and improvise their lifestyles.\n
+
+\t\t\t\ti-HeLP which is still under a research project for now incorporates the latest in proven health and behavioral science to become a platform of choice for many users as well as healthcare providers soon.</string>
 </resources>
